fix mobile overflow, change image about, fix button download cv

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ a {
 
 /* About */
 .about {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 768px) {
